# dsv_test_case

./: README.md  Test_case_writeup.aux  Test_case_writeup.synctex  Test_case_writeup.tex  Test_case_writeup.tex.bak  alternative_model.py  data_extraction.py  feature_engineering.py  model.py  parsed_OCR_data_test.parquet  parsed_OCR_data_train.parquet  preprocessed_data_train.parquet  pyproject.toml
dataset/: parsed_OCR_data_test.parquet  preprocessed_data_test.parquet
docs/: Test_case_writeup.aux  Test_case_writeup.synctex  Test_case_writeup.tex  Test_case_writeup.tex.bak
heurigym/: heurigym_cost_results.json  show_optimization_graphs.py
heurigym/pickup_delivery_time_windows/demo/: lc101.txt  lc201.txt  lr101.txt  lr201.txt  lrc101.txt  lrc201.txt
heurigym/pickup_delivery_time_windows/eval/lc_100/: lc102.txt  lc103.txt  lc104.txt  lc105.txt  lc106.txt  lc107.txt  lc108.txt  lc109.txt  lc202.txt  lc203.txt  lc204.txt  lc205.txt  lc206.txt  lc207.txt  lc208.txt
heurigym/pickup_delivery_time_windows/eval/lr_100/: lr102.txt  lr103.txt  lr104.txt  lr105.txt  lr106.txt  lr107.txt  lr108.txt  lr109.txt  lr110.txt
src/: data_extraction.py  feature_engineering.py  model.py  parsed_OCR_data_train.parquet
src/ocr_output.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
